[package]
name = "pkt-tester"
authors = ["Kyle Simpson"]
email = "kyleandrew.simpson@gmail.com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10"
pnet = "0.29"
protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.16"
