[package]
name = "probes"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
konst = "0.2"
redbpf-macros = { version = "2.3.0", git = "https://github.com/FelixMcFelix/redbpf/", branch = "support-xskmap" }
redbpf-probes = { version = "2.3.0", git = "https://github.com/FelixMcFelix/redbpf/", branch = "support-xskmap" }

[build-dependencies]
cargo-bpf = { version = "2.3.0", git = "https://github.com/FelixMcFelix/redbpf/", branch = "support-xskmap", default-features = false }

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "xskmaptest"
path = "src/xskmaptest/main.rs"
required-features = ["probes"]
